--- a/src/ingredient-list.component/ingredient-list.tpl.html
+++ b/src/ingredient-list.component/ingredient-list.tpl.html
@@ -1,3 +1,32 @@
+
+<div class="container">
+	<div class="col-lg-2 col-sm-3 col-xs-0"></div>
+	<div class="col-lg-8 col-sm-6 col-xs-12">
+		<form [formGroup]="myForm" (ngSubmit)="onSubmit()">
+			<div>
+				<div class="form-group">
+					<label for="item-name">Item Name</label>
+					<input type="text"
+						class="form-control"
+						placeholder="Enter an Ingredient"
+						id="item-name"
+						formControlName="itemName">
+				</div>
+				<div class="form-group">
+					<label for="amount">Amount</label>
+					<input type="text"
+						class="form-control"
+						placeholder="Amount"
+						id="amount"
+						formControlName="amount">
+				</div>
+				<button type="submit" class="btn btn-primary" [disabled]="!myForm.valid">Submit</button>
+			</div>
+		</form>
+	</div>
+</div>
+
+
 <div class="container">
 	<div class="col-lg-2 col-sm-0 col-xs-0"></div>
 	<div class="col-lg-8 col-sm-12 col-xs-12">
