began adding allergen info and proper boostrap config

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
                     app: {
                         main: 'register',
                         defaultExtension: 'js'
+                    },
+                    "node_modules/ng2-bootstrap": {
+                    "defaultExtension": "js"
                     }
+                },
+                paths: {
+                    "ng2-bootstrap/ng2-bootstrap":   "node_modules/ng2-bootstrap/ng2-bootstrap",
                 }
             });
             System.import('app/main')
