--- a/src/get-recipe.component/get-recipe.tpl.html
+++ b/src/get-recipe.component/get-recipe.tpl.html
@@ -13,6 +13,18 @@
 					<span class="glyphicon glyphicon-search"></span>
 				</button>
 			</span>
+			<div class="btn-group" dropdown [(isOpen)]="status.isopen">
+				<button id="single-button" type="button" class="btn btn-primary" dropdownToggle [disabled]="disabled">
+				Button dropdown <span class="caret"></span>
+				</button>
+				<ul dropdownMenu role="menu" aria-labelledby="single-button">
+				<li role="menuitem"><a class="dropdown-item" href="#">Action</a></li>
+				<li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
+				<li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>
+				<li class="divider dropdown-divider"></li>
+				<li role="menuitem"><a class="dropdown-item" href="#">Separated link</a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 </div>
@@ -27,9 +39,16 @@
 				{{ recipe.Recipe }}
 			</div>
 				<div class="panel-body" *ngIf="index == i && selectedRecipe == true">
-					<div
-					*ngFor="let ingredients of recipes[i].Ingredients">
-					- {{ ingredients }}
+					<div *ngFor="let ingredients of recipes[i].Ingredients">
+						- {{ ingredients }}
+						<div *ngFor="let allergen of allergies; let i=index">
+							<div *ngIf="ingredients == allergen">
+								<br>
+								<div class="alert alert-danger">
+									Warning Allergen! - {{ingredients}}
+								</div>
+							</div>
+						</div>
 					</div>
 						<div class="pull-right">
 							<button type="button" class="btn btn-primary box-shadow--2dp" (click)="onAddToFavorite(i)">
