--- a/src/get-recipe.component/get-recipe.tpl.html
+++ b/src/get-recipe.component/get-recipe.tpl.html
@@ -13,18 +13,18 @@
 					<span class="glyphicon glyphicon-search"></span>
 				</button>
 			</span>
-			<div class="btn-group" dropdown [(isOpen)]="status.isopen">
-				<button id="single-button" type="button" class="btn btn-primary" dropdownToggle [disabled]="disabled">
-				Button dropdown <span class="caret"></span>
-				</button>
-				<ul dropdownMenu role="menu" aria-labelledby="single-button">
-				<li role="menuitem"><a class="dropdown-item" href="#">Action</a></li>
-				<li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
-				<li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>
-				<li class="divider dropdown-divider"></li>
-				<li role="menuitem"><a class="dropdown-item" href="#">Separated link</a></li>
-				</ul>
-			</div>
+		</div>
+		<div class="btn-group" dropdown [(isOpen)]="status.isopen">
+			<button id="single-button" type="button" class="btn btn-primary" dropdownToggle [disabled]="disabled">
+			Allergens <span class="caret"></span>
+			</button>
+			<ul dropdownMenu role="menu" aria-labelledby="single-button">
+				<div class="checkbox allergen-checkbox" *ngFor="let item of allergens; let i=index">
+					<input type="checkbox"
+						(click)="onAddToAllergens(allergens[i])">
+						{{item}}
+				</div>
+			</ul>
 		</div>
 	</div>
 </div>
